Wrap IntrospectionException in a BeansException thrown from the BeanUtils.acquireBeanInformation(:Object) method.
Make use of ElementsExceptionsFactory.newBeansException(..) factory method.